# openai-proxy

./: Dockerfile  completions.http  docker-compose.yml  main.py  openai_api.http  pyproject.toml  settings.py  utils.py
.run/: dev.run.xml  prod.run.xml
