[tool.poetry]
name = "openai-proxy"
version = "0.1.0"
description = ""
authors = ["ragaysin <ragaysin@avito.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
httpx = {extras = ["socks"], version = "^0.27.2"}
pydantic-settings = "^2.6.1"
openai = "^1.54.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
